errors refactor